--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "shop":"nodemon ./myShop.js",
     "dev":"nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
